--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: voca_ai
+name: voca
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -36,6 +36,7 @@ dependencies:
   path: ^1.8.3
   intl: ^0.19.0
   table_calendar: ^3.0.9
+  fl_chart: ^0.65.0  # 添加图表库
 
 dev_dependencies:
   flutter_test:
@@ -54,3 +55,5 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
+  generate: true
+
