--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "voca_ai" "\0"
+            VALUE "FileDescription", "voca" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "voca_ai" "\0"
+            VALUE "InternalName", "voca" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "voca_ai.exe" "\0"
-            VALUE "ProductName", "voca_ai" "\0"
+            VALUE "OriginalFilename", "voca.exe" "\0"
+            VALUE "ProductName", "voca" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
