--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   path: ^1.8.3
   intl: ^0.19.0
   table_calendar: ^3.0.9
-  fl_chart: ^0.65.0  # 添加图表库
+  fl_chart: ^0.65.0
+  dart_openai: ^5.1.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
