--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   fl_chart: ^0.65.0
   dart_openai: ^5.1.0
   shared_preferences: ^2.2.2
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
